index.html files is added.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <p>
-<strong> Intro 2 Inf Sys <\strong>
+<strong> Intro 2 Inf Sys </strong>
 </p>
 
 <p>
@@ -34,7 +34,7 @@ Yiğit Güriş
     </ul>
 </ul>
 
-<\body>
+</body>
 </html>
 
 
