--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
 <p>
-<strong> Intro 2 Inf Sys </strong>
+<strong> Intro 2 Inf Sys 
+</strong>
 </p>
 
 <p>
@@ -34,7 +35,7 @@ Yiğit Güriş
     </ul>
 </ul>
 
-</body>
+
 </html>
 
 
