--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
 <p>
-<strong> Intro 2 Inf Sys 
-</strong>
+<strong> Intro 2 Inf Sys </strong>
 </p>
 
 <p>
@@ -35,7 +34,7 @@ Yiğit Güriş
     </ul>
 </ul>
 
-
+</body>
 </html>
 
 
