I added a link element to the HEAD

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
 <title> Yiğit's Github Page </title>
+<link rel = "stylesheet" type = "text/css" href = "15_11_2021.css" />
 <style type="text/css">
     h1 {
         color: red;
