--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
 <head>
 <title> Yiğit's Github Page </title>
-<link rel = "stylesheet" type = "text/css" href = "./all.css" />
 <style type="text/css">
     h1 {
         color: red;
@@ -23,7 +22,7 @@
 </style>
 
      
-
+<link rel = "stylesheet" type = "text/css" href = "./all.css" />
 </head>
 
 
@@ -32,7 +31,7 @@
 <strong> Intro 2 Inf Sys </strong>
 </p>
 
-<p>
+<p class ="centered">
 <em>
 Yiğit Güriş
 <br>
