--- a/index.html
+++ b/index.html
@@ -26,12 +26,22 @@
 </head>
 
 
-<body>
+<body onload="welcomeFunction(); document.body.style.backgroundColor ='pink'" 
+onresize="document.body.style.backgroundColor ='lightblue'"
+
+onkeydown="document.body.style.backgroundColor='white'"
+onkeyup="document.body.style.backgroundColor='lightyellow'">
+<script>
+      function welcomeFunction()
+      {
+        alert("Welcome!");
+      }
+</script>              
 <p>
 <strong> Intro 2 Inf Sys </strong>
 </p>
 
-<p class ="centered">
+<p class ="centered" onmouseover="document.querySelector('.centered').style.font='bold 20pt arial,serif'">
 <em>
 Yiğit Güriş
 <br>
@@ -41,18 +51,20 @@ Yiğit Güriş
  
 <p> Evolution of Homo sapiens </p>
 
-<ul>
+<ul id="unorderedL" onmouseover="document.getElementById('unorderedL').style.backgroundColor='purple'">
     <li> Homo habilis (able man) </li>
     <li> Homo erectus (upright man) </li>
     <li> Homo neanderthalensis </li>
     <li> Homo floresiensis (hobbit) </li>
     <li> Homo sapiens (wise man) </li>
-    <ul>
+    <ul id="insideUL" onmouseover="document.getElementById('insideUL').style.backgroundColor='orange'" >
         <li> Homo sapiens sapiens </li>
     </ul>
 </ul>
 
-<h1> <strog> Human Evolution </strong> </h1>
+<h1 onmouseover="style.color='orange'; style.backgroundColor='lightgreen'"
+    onmouseout="style.color='red'; style.backgroundColor='white' ">
+<strong> Human Evolution </strong> </h1>
 <p> <img src="evolution-diagram.png"> </p>
 
 <p> You can find the link of the image below 
@@ -65,7 +77,7 @@ Yiğit Güriş
 
 <p> This image is clickable, click on it and try.
    <a href="https://www.biologyonline.com/dictionary/homo-sapiens-sapiens">
-       <img src="evolution-diagram.png">
+       <img id="myImg" alt="Evolution diagram" onclick="alert(document.getElementById('myImg').alt)" src="evolution-diagram.png">
    </a>   
 </p>
 
